[gd_scene load_steps=4 format=3 uid="uid://b33oltseksj8k"]

[ext_resource type="PackedScene" uid="uid://dwpr40bt7wqxw" path="res://game_logic/dock/map/map.tscn" id="1_jvjmg"]
[ext_resource type="Script" path="res://game_logic/dock/dock.gd" id="1_qbvku"]
[ext_resource type="PackedScene" uid="uid://4ncirgb41vkh" path="res://game_logic/dock/Room.tscn" id="4_3j8t3"]

[node name="Dock" type="Node2D"]
script = ExtResource("1_qbvku")
metadata/_edit_lock_ = true

[node name="Map" parent="." instance=ExtResource("1_jvjmg")]
metadata/_edit_lock_ = true

[node name="Room" parent="." instance=ExtResource("4_3j8t3")]
visible = false
metadata/_edit_lock_ = true

[connection signal="start_room" from="Map" to="." method="_on_map_start_room"]
[connection signal="back_to_main" from="Room" to="." method="dock_to_main"]
[connection signal="back_to_map" from="Room" to="." method="_on_room_back_to_map"]
